--- a/chef/cookbooks/glance/templates/default/glance-api-paste.ini.erb
+++ b/chef/cookbooks/glance/templates/default/glance-api-paste.ini.erb
@@ -71,13 +71,13 @@ paste.filter_factory = glance.api.middleware.context:ContextMiddleware.factory
 
 [filter:authtoken]
 paste.filter_factory = keystone.middleware.auth_token:filter_factory
-service_protocol = http
+service_protocol = <%= @keystone_protocol %>
 service_host = <%= @keystone_address %>
 service_port = <%= @keystone_service_port %>
-auth_protocol = http
+auth_protocol = <%= @keystone_protocol %>
 auth_host = <%= @keystone_address %>
 auth_port = <%= @keystone_admin_port %>
-auth_uri = http://<%= @keystone_address %>:<%= @keystone_service_port %>/
+auth_uri = <%= @keystone_protocol %>://<%= @keystone_address %>:<%= @keystone_service_port %>/
 admin_token = <%= @keystone_auth_token %>
 admin_tenant_name = <%= @keystone_service_tenant %>
 admin_user = <%= @keystone_service_user %>
