--- a/crowbar_framework/app/views/barclamp/glance/_edit_attributes.html.haml
+++ b/crowbar_framework/app/views/barclamp/glance/_edit_attributes.html.haml
@@ -37,6 +37,27 @@
     -#%p
       %label{ :for => :swift_store_key }= t('.swift_store_key')
       %input#swift_store_key{:type => "text", :name => "swift_store_key", :'data-default' => @proposal.raw_data['attributes'][@proposal.barclamp]["swift_store_key"], :onchange => "update_value('swift_store_key','swift_store_key', 'string')"}
+
+    %label{ :for => :ssl }= t('.ssl')
+    %div.container{ :id => :ssl }
+      %p
+        %label{ :for => :protocol }= t('.protocol')
+        = select_tag :protocol, options_for_select([['HTTP','http'], ['HTTPS', 'https']], @proposal.raw_data['attributes'][@proposal.barclamp]["api"]["protocol"].to_s), :onchange => "update_value('api/protocol', 'protocol', 'string')"
+
+      %div{ :id => :protocol_div }
+        //TODO/Fixme: provide upload dialog for these. For now we have to rely on the files being present on the machine:
+        %p
+          %label{ :for => :api_ssl_certfile }= t('.api_ssl_certfile')
+          = text_field_tag :api_ssl_certfile, @proposal.raw_data['attributes'][@proposal.barclamp]["api"]["ssl"]["certfile"], :size => 80, :onchange => "update_value('api/ssl/certfile', 'api_ssl_certfile', 'string')"
+
+        %p
+          %label{ :for => :api_ssl_keyfile }= t('.api_ssl_keyfile')
+          = text_field_tag :api_ssl_keyfile, @proposal.raw_data['attributes'][@proposal.barclamp]["api"]["ssl"]["keyfile"], :size => 80, :onchange => "update_value('api/ssl/keyfile', 'api_ssl_keyfile', 'string')"
+
+        %p
+          %label{ :for => :api_ssl_ca_trust_chain }= t('.api_ssl_ca_trust_chain')
+          = text_field_tag :api_ssl_ca_trust_chain, @proposal.raw_data['attributes'][@proposal.barclamp]["api"]["ssl"]["ca_trust_chain"], :size => 80, :onchange => "update_value('api/ssl/ca_trust_chain', 'api_ssl_ca_trust_chain', 'string')"
+
     %p
       %label{ :for => :scrubber_header }= t('.scrubber_header')
     %div.container
@@ -187,3 +208,15 @@
     %p
       %label{ :for => :use_syslog }= t('.use_syslog')
       = select_tag :use_syslog, options_for_select([['true','true'], ['false', 'false']], @proposal.raw_data['attributes'][@proposal.barclamp]["use_syslog"].to_s), :onchange => "update_value('use_syslog', 'use_syslog', 'boolean')"
+
+:javascript
+  function toggle_protocol() {
+    if ($('#protocol option:selected').attr('value') == 'https') {
+      $('#protocol_div').show();
+    } else {
+      $('#protocol_div').hide();
+    }
+  };
+
+  $(document).ready(function () { toggle_protocol(); });
+  $('#protocol').change(toggle_protocol);
